--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 #terraform
 infra/terraform/.terraform/
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.backup
 
 # dependencies
 /node_modules
