--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+  "dev": "next dev",
+  "build": "rm -rf .next && next build && cp -r public .next/standalone/public && cp -r .next/static .next/standalone/.next/static",
+  "start": "node .next/standalone/server.js",
+  "lint": "eslint"
+},
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@vercel/analytics": "^1.6.1",
