--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
   "dev": "next dev",
-  "build": "rm -rf .next && next build && cp -r public .next/standalone/public && cp -r .next/static .next/standalone/.next/static",
+  "build": "next build",
+  "build:local": "rm -rf .next && next build && cp -r public .next/standalone/public && cp -r .next/static .next/standalone/.next/static",
   "start": "node .next/standalone/server.js",
   "lint": "eslint"
 },
